# outline-mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: design-spec.md
scripts/: setup.py
src/outline_mcp/: __init__.py  auth.py  cache.py  client.py  config.py  server.py  tools.py
