[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "outline-mcp-server"
version = "0.1.0"
description = "MCP server exposing an Outline knowledge base to Claude, ChatGPT and other MCP clients"
readme = "README.md"
requires-python = ">=3.11"
# License: choose MIT or Apache-2.0 before publishing (see docs/design-spec.md §11).
dependencies = [
    "mcp[cli]>=1.28.1,<2",
    "httpx>=0.27",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "starlette>=0.37",
]

[project.scripts]
outline-mcp-server = "outline_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/outline_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
